[tool.poetry]
name = "github-scraper"
version = "0.1.0"
description = "A python web scraping project."
authors = ["nickmwangemi <nickmwangemi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
